--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Man-woman relationships -- Fiction'
 - !lcsh 'Sisters -- Fiction'
 - !lcc 'PR'
+- GITenberg
 title: Anna the Adventuress
 url: http://www.gutenberg.org/ebooks/26596
